--- a/.gitmodules
+++ b/.gitmodules
@@ -2,6 +2,6 @@
 	path = NWM
 	url = https://github.com/trimbleava/nwm_public_nuopc.git
 	branch = master
-[submodule "nwm_public_nuopc"]
-	path = nwm_public_nuopc
-	url = https://github.com/trimbleava/nwm_public_nuopc.git
+#[submodule "nwm_public_nuopc"]
+#	path = nwm_public_nuopc
+#	url = https://github.com/trimbleava/nwm_public_nuopc.git
