--- a/WW3/model/esmf/Makefile
+++ b/WW3/model/esmf/Makefile
@@ -7,15 +7,18 @@ WW3_BASEDIR  := $(shell cd ../.. 1>/dev/null 2>&1 && pwd)
 WW3_BINDIR := $(WW3_DIR)/bin
 WW3_TMPDIR := $(WW3_DIR)/tmp
 WW3_EXEDIR := $(WW3_DIR)/exe
-WW3_COMP ?= gnu
-WW3_CC := gcc
-WW3_F90 := gfortran
+#WW3_COMP ?= gnu
+#WW3_CC := gcc
+#WW3_F90 := gfortran
+WW3_COMP ?= intel
+WW3_CC := cc
+WW3_F90 := ifort
 SWITCHES := $(shell cat switch)
 
 WWATCH3_ENV := $(WW3_BINDIR)/wwatch3.env
-WWATCH3_NETCDF := NC4
-NETCDF_CONFIG := $(shell which nc-config)
-export WWATCH3_ENV WWATCH3_NETCDF NETCDF_CONFIG
+#WWATCH3_NETCDF := NC4
+#NETCDF_CONFIG := $(shell which nc-config)
+export WWATCH3_ENV 
 
 EXE := $(WW3_EXEDIR)/ww3_multi_esmf
 
@@ -35,7 +38,7 @@ ifeq ($(WW3_COMP),Portland)
 else ifeq ("$(WW3_COMP)",$(filter "$(WW3_COMP)","pgi" "datarmor_pgi" "datarmor_pgi_debug"))
  ESMF_F90COMPILEOPTS := $(ESMF_F90COMPILEOPTS) -byteswapio
 # intel
-else ifeq ("$(WW3_COMP)",$(filter "$(WW3_COMP)","Intel" "hera" "orion" "cheyenne" "stampede"))
+else ifeq ("$(WW3_COMP)",$(filter "$(WW3_COMP)","Intel" "hera" "orion" "cheyenne" "stampede" "hatteras"))
  ESMF_F90COMPILEOPTS := $(ESMF_F90COMPILEOPTS) -convert big_endian
 else ifeq ("$(WW3_COMP)",$(filter "$(WW3_COMP)","wcoss_cray" "wcoss_dell_p3"))
  ESMF_F90COMPILEOPTS := $(ESMF_F90COMPILEOPTS) -convert big_endian
@@ -168,7 +171,7 @@ gout:
              -e "s/MPI/ /g"\
              -e "s/PDLIB/ /g"\
                   $(WW3_BINDIR)/tempswitch > $(WW3_BINDIR)/switch
-	\rm -f $(WW3_BINDIR)/tempswitch
+#	\rm -f $(WW3_BINDIR)/tempswitch
 	$(WW3_BINDIR)/w3_make ww3_grid
 	$(WW3_BINDIR)/w3_make ww3_outf
 	$(WW3_BINDIR)/w3_make ww3_outp
@@ -177,8 +180,9 @@ gout:
 	$(WW3_BINDIR)/w3_make ww3_prnc
 	$(WW3_BINDIR)/w3_make ww3_ounf
 	$(WW3_BINDIR)/w3_make ww3_ounp
+	$(WW3_BINDIR)/w3_make ww3_bounc
 	@echo "$(SWITCHES)" > $(WW3_BINDIR)/tempswitch
-	@sed -e "s/DIST/SHRD/g"\
+#	@sed -e "s/DIST/SHRD/g"\
 	     -e "s/OMPG/ /g"\
 	     -e "s/OMPH/ /g"\
              -e "s/MPIT/ /g"\
@@ -186,8 +190,8 @@ gout:
              -e "s/PDLIB/ /g"\
              -e "s/NOGRB/NCEP2 NCO/g"\
                   $(WW3_BINDIR)/tempswitch > $(WW3_BINDIR)/switch
-	\rm -f $(WW3_BINDIR)/tempswitch
-	$(WW3_BINDIR)/w3_make ww3_grib
+#	\rm -f $(WW3_BINDIR)/tempswitch
+#	$(WW3_BINDIR)/w3_make ww3_grib
 	\rm -rf $(WW3_BASEDIR)/exec
 	\mkdir -p $(WW3_BASEDIR)/exec
 	\cp -f $(WW3_EXEDIR)/ww3_* $(WW3_BASEDIR)/exec
